--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
              <li data-symbol="T i" aria-label="atomic symbol T i" class="bigfont2">T<span class="letter-tight">i</span></li>
              <li data-element="thallium"><span class="bigfont1" aria-label="element">Thallium</span></li>
              <li data-weight="204.38"><span class="bigfont1" aria-label="standard atomic weight 204 . 3 8">204.38</span></li>
-             <li data-groundstate="thallium"><span class="bigfont1" aria-label="ground [Hg]6p">[Hg]6p</li>
+             <li data-groundstate="thallium"><span class="bigfont1" aria-label="ground [Hg]6p">[Hg]6p</span></li>
              <li data-ev="6.1083"><span class="bigfont1" aria-label="ionization energy 6 . 1 0 8 3">6.1083</span></li> 
           </ul>
       </td>
@@ -795,7 +795,7 @@
              <li data-symbol="P b" aria-label="atomic symbol P b" class="bigfont2">P<span class="letter-tight">b</span></li>
              <li data-element="lead"><span class="bigfont1" aria-label="element">Lead</span></li>
              <li data-weight="207.2"><span class="bigfont1" aria-label="standard atomic weight 207 . 2">207.2</span></li>
-             <li data-groundstate="lead"><span class="bigfont1" aria-label="ground [Hg]6p 2">[Hg]6p<sup>2</sup></li>
+             <li data-groundstate="lead"><span class="bigfont1" aria-label="ground [Hg]6p 2">[Hg]6p<sup>2</sup></span></li>
              <li data-ev="7.4167"><span class="bigfont1" aria-label="ionization energy 7 . 4 1 6 7">7.4167</span></li> 
           </ul>
       </td>
@@ -805,7 +805,7 @@
              <li data-symbol="B i" aria-label="atomic symbol B i" class="bigfont2">B<span class="letter-tight">i</span></li>
              <li data-element="bismuth"><span class="bigfont1" aria-label="element">Bismuth</span></li>
              <li data-weight="208.98"><span class="bigfont1" aria-label="standard atomic weight 208 . 9 8">208.98</span></li>
-             <li data-groundstate="bismuth"><span class="bigfont1" aria-label="ground [Hg]6p 3">[Hg]6p<sup>3</sup></li>
+             <li data-groundstate="bismuth"><span class="bigfont1" aria-label="ground [Hg]6p 3">[Hg]6p<sup>3</sup></span></li>
              <li data-ev="7.2855"><span class="bigfont1" aria-label="ionization energy 7 . 2 8 5 5">7.2855</span></li> 
           </ul>
       </td>
@@ -815,7 +815,7 @@
              <li data-symbol="P o" aria-label="atomic symbol P o" class="bigfont2">P<span class="letter-tight">o</span></li>
              <li data-element="polonium"><span class="bigfont1" aria-label="element">Polonium</span></li>
              <li data-weight="(209)"><span class="bigfont1" aria-label="standard atomic weight (209)">(209)</span></li>
-             <li data-groundstate="polonium"><span class="bigfont1" aria-label="ground [Hg]6p 4">[Hg]6p<sup>4</sup></li>
+             <li data-groundstate="polonium"><span class="bigfont1" aria-label="ground [Hg]6p 4">[Hg]6p<sup>4</sup></span></li>
              <li data-ev="8.414"><span class="bigfont1" aria-label="ionization energy 8 . 4 1 4">8.414</span></li> 
           </ul>
       </td>
@@ -825,7 +825,7 @@
              <li data-symbol="A t" aria-label="atomic symbol A t" class="bigfont2">A<span class="letter-tight">t</span></li>
              <li data-element="astatine"><span class="bigfont1" aria-label="element">Astatine</span></li>
              <li data-weight="(210)"><span class="bigfont1" aria-label="standard atomic weight (210)">(210)</span></li>
-             <li data-groundstate="astatine"><span class="bigfont1" aria-label="ground [Hg]6p 5">[Hg]6p<sup>5</sup></li>
+             <li data-groundstate="astatine"><span class="bigfont1" aria-label="ground [Hg]6p 5">[Hg]6p<sup>5</sup></span></li>
              <li data-ev="9.3175"><span class="bigfont1" aria-label="ionization energy 9 . 3 1 7 5">9.3175</span></li> 
           </ul>
       </td>
@@ -835,7 +835,7 @@
              <li data-symbol="R n" aria-label="atomic symbol R n" class="bigfont2">R<span class="letter-tight">n</span></li>
              <li data-element="radon"><span class="bigfont1" aria-label="element">Radon</span></li>
              <li data-weight="(222)"><span class="bigfont1" aria-label="standard atomic weight (222)">(222)</span></li>
-             <li data-groundstate="radon"><span class="bigfont1" aria-label="ground [Hg]6p 6">[Hg]6p<sup>6</sup></li>
+             <li data-groundstate="radon"><span class="bigfont1" aria-label="ground [Hg]6p 6">[Hg]6p<sup>6</sup></span></li>
              <li data-ev="10.7485"><span class="bigfont1" aria-label="ionization energy 10 . 7 4 8 5">10.7485</span></li> 
           </ul>
       </td>
