--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
              <li data-symbol="R a" aria-label="atomic symbol R a" class="bigfont2">R<span class="letter-tight">a</span></li>
              <li data-element="radium"><span class="bigfont1" aria-label="element">Radium</span></li>
              <li data-weight="(226)"><span class="bigfont1" aria-label="standard atomic weight (226)">(226)</span></li>
-             <li data-groundstate="radium"><span class="bigfont1" aria-label="ground [Rn]7s 2">[Rn]7s<sup>2</sup></li>
+             <li data-groundstate="radium"><span class="bigfont1" aria-label="ground [Rn]7s 2">[Rn]7s<sup>2</sup></span></li>
              <li data-ev="5.2784"><span class="bigfont1" aria-label="ionization energy 5 . 2 7 8 4">5.2784</span></li> 
           </ul>
       </td>
@@ -868,7 +868,7 @@
              <li data-symbol="R f" aria-label="atomic symbol R f" class="bigfont2">R<span class="letter-tight">f</span></li>
              <li data-element="rutherfordium"><span class="bigfont1" aria-label="element">Rutherfordium</span></li>
              <li data-weight="(267)"><span class="bigfont1" aria-label="standard atomic weight (267)">(267)</span></li>
-             <li data-groundstate="rutherfordium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 2 7s 2">[Rn]5f<sup>14</sup>6d<sup>2</sup>7s<sup>2</sup></li>
+             <li data-groundstate="rutherfordium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 2 7s 2">[Rn]5f<sup>14</sup>6d<sup>2</sup>7s<sup>2</sup></span></li>
              <li data-ev="6.02"><span class="bigfont1" aria-label="ionization energy 6 . 0 2">6.02</span></li> 
           </ul>
       </td>
@@ -878,7 +878,7 @@
              <li data-symbol="D b" aria-label="atomic symbol D b" class="bigfont2">D<span class="letter-tight">b</span></li>
              <li data-element="dubnium"><span class="bigfont1" aria-label="element">Dubnium</span></li>
              <li data-weight="(268)"><span class="bigfont1" aria-label="standard atomic weight (268)">(268)</span></li>
-             <li data-groundstate="dubnium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 3 7s 2"> [Rn]5f<sup>14</sup>6d<sup>3</sup>7s<sup>2</sup></li>
+             <li data-groundstate="dubnium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 3 7s 2"> [Rn]5f<sup>14</sup>6d<sup>3</sup>7s<sup>2</sup></span></li>
              <li data-ev="6.8"><span class="bigfont1" aria-label="ionization energy 6 . 8">6.8</span></li> 
           </ul>
       </td>
@@ -888,7 +888,7 @@
              <li data-symbol="S g" aria-label="atomic symbol S g" class="bigfont2">S<span class="letter-tight">g</span></li>
              <li data-element="seaborgium"><span class="bigfont1" aria-label="element">Seaborgium</span></li>
              <li data-weight="(269)"><span class="bigfont1" aria-label="standard atomic weight (269)">(269)</span></li>
-             <li data-groundstate="seaborgium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 4 7s 2"> [Rn]5f<sup>14</sup>6d<sup>4</sup>7s<sup>2</sup></li>
+             <li data-groundstate="seaborgium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 4 7s 2"> [Rn]5f<sup>14</sup>6d<sup>4</sup>7s<sup>2</sup></span></li>
              <li data-ev="7.8"><span class="bigfont1" aria-label="ionization energy 7 . 8">7.8</span></li> 
           </ul>
       </td>
@@ -898,7 +898,7 @@
              <li data-symbol="B h" aria-label="atomic symbol B h" class="bigfont2">B<span class="letter-tight">h</span></li>
              <li data-element="bohrium"><span class="bigfont1" aria-label="element">Bohrium</span></li>
              <li data-weight="(270)"><span class="bigfont1" aria-label="standard atomic weight (270)">(270)</span></li>
-             <li data-groundstate="bohrium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 5 7s 2"> [Rn]5f<sup>14</sup>6d<sup>5</sup>7s<sup>2</sup></li>
+             <li data-groundstate="bohrium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 5 7s 2"> [Rn]5f<sup>14</sup>6d<sup>5</sup>7s<sup>2</sup></span></li>
              <li data-ev="7.7"><span class="bigfont1" aria-label="ionization energy 7 . 7">7.7</span></li> 
           </ul>
       </td>
@@ -908,7 +908,7 @@
              <li data-symbol="H s" aria-label="atomic symbol H s" class="bigfont2">H<span class="letter-tight">s</span></li>
              <li data-element="bohrium"><span class="bigfont1" aria-label="element">Hassium</span></li>
              <li data-weight="(269)"><span class="bigfont1" aria-label="standard atomic weight (269)">(269)</span></li>
-             <li data-groundstate="bohrium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 6 7s 2"> [Rn]5f<sup>14</sup>6d<sup>6</sup>7s<sup>2</sup></li>
+             <li data-groundstate="bohrium"><span class="bigfont1" aria-label="ground [Rn]5f 14 6 d 6 7s 2"> [Rn]5f<sup>14</sup>6d<sup>6</sup>7s<sup>2</sup></span></li>
              <li data-ev="7.6"><span class="bigfont1" aria-label="ionization energy 7 . 6">7.6</span></li> 
           </ul>
       </td>
