--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@
              <li data-symbol="F r" aria-label="atomic symbol F r" class="bigfont2">F<span class="letter-tight">r</span></li>
              <li data-element="francium"><span class="bigfont1" aria-label="element">Francium</span></li>
              <li data-weight="(223)"><span class="bigfont1" aria-label="standard atomic weight (223)">(223)</span></li>
-             <li data-groundstate="francium"><span class="bigfont1" aria-label="ground [Rn]7s">[Rn]7s</li>
+             <li data-groundstate="francium"><span class="bigfont1" aria-label="ground [Rn]7s">[Rn]7s</span></li>
              <li data-ev="4.0727"><span class="bigfont1" aria-label="ionization energy 4 . 0 7 2 7">4.0727</span></li> 
           </ul>
       </td>
@@ -928,7 +928,7 @@
              <li data-symbol="D s" aria-label="atomic symbol D s" class="bigfont2">D<span class="letter-tight">s</span></li>
              <li data-element="darmstadtium"><span class="bigfont1" aria-label="element">Darmstadtium</span></li>
              <li data-weight="(281)"><span class="bigfont1" aria-label="standard atomic weight (281)">(281)</span></li>
-             <li data-groundstate="darmstadtium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-groundstate="darmstadtium"><span class="bigfont1" aria-label="ground ">&nbsp;</span></li>
              <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
           </ul>
       </td>
@@ -938,7 +938,7 @@
              <li data-symbol="R g" aria-label="atomic symbol R g" class="bigfont2">R<span class="letter-tight">g</span></li>
              <li data-element="roentgenium"><span class="bigfont1" aria-label="element">Roentgenium</span></li>
              <li data-weight="(282)"><span class="bigfont1" aria-label="standard atomic weight (282)">(282)</span></li>
-             <li data-groundstate="roentgenium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-groundstate="roentgenium"><span class="bigfont1" aria-label="ground ">&nbsp;</span></li>
              <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
           </ul>
       </td>
@@ -948,7 +948,7 @@
              <li data-symbol="C n" aria-label="atomic symbol C n" class="bigfont2">C<span class="letter-tight">n</span></li>
              <li data-element="copernicium"><span class="bigfont1" aria-label="element">Copernicium</span></li>
              <li data-weight="(285)"><span class="bigfont1" aria-label="standard atomic weight (285)">(285)</span></li>
-             <li data-groundstate="copernicium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-groundstate="copernicium"><span class="bigfont1" aria-label="ground ">&nbsp;</span></li>
              <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
           </ul>
       </td>
@@ -958,7 +958,7 @@
              <li data-symbol="N h" aria-label="atomic symbol N h" class="bigfont2">N<span class="letter-tight">h</span></li>
              <li data-element="nihonium"><span class="bigfont1" aria-label="element">Nihonium</span></li>
              <li data-weight="(286)"><span class="bigfont1" aria-label="standard atomic weight (286)">(286)</span></li>
-             <li data-groundstate="nihonium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-groundstate="nihonium"><span class="bigfont1" aria-label="ground ">&nbsp;</span></li>
              <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
           </ul>
       </td>
@@ -968,7 +968,7 @@
              <li data-symbol="F l" aria-label="atomic symbol F l" class="bigfont2">F<span class="letter-tight">l</span></li>
              <li data-element="flerovium"><span class="bigfont1" aria-label="element">Flerovium</span></li>
              <li data-weight="(286)"><span class="bigfont1" aria-label="standard atomic weight (286)">(286)</span></li>
-             <li data-groundstate="flerovium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-groundstate="flerovium"><span class="bigfont1" aria-label="ground ">&nbsp;</span></li>
              <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
           </ul>
       </td>
@@ -978,7 +978,7 @@
              <li data-symbol="M c" aria-label="atomic symbol M c" class="bigfont2">M<span class="letter-tight">c</span></li>
              <li data-element=" moscovium"><span class="bigfont1" aria-label="element"> Moscovium</span></li>
              <li data-weight="(289)"><span class="bigfont1" aria-label="standard atomic weight (289)">(289)</span></li>
-             <li data-groundstate="moscovium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-groundstate="moscovium"><span class="bigfont1" aria-label="ground ">&nbsp;</span></li>
              <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
           </ul>
       </td>
@@ -988,7 +988,7 @@
              <li data-symbol="L v" aria-label="atomic symbol L v" class="bigfont2">L<span class="letter-tight">v</span></li>
              <li data-element="livermorium"><span class="bigfont1" aria-label="element">Livermorium</span></li>
              <li data-weight="(293)"><span class="bigfont1" aria-label="standard atomic weight (293)">(293)</span></li>
-             <li data-groundstate="livermorium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-groundstate="livermorium"><span class="bigfont1" aria-label="ground ">&nbsp;</span></li>
              <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
           </ul>
       </td>
@@ -998,7 +998,7 @@
              <li data-symbol="T s" aria-label="atomic symbol T s" class="bigfont2">T<span class="letter-tight">s</span></li>
              <li data-element="tennessine"><span class="bigfont1" aria-label="element">Tennessine</span></li>
              <li data-weight="(294)"><span class="bigfont1" aria-label="standard atomic weight (294)">(294)</span></li>
-             <li data-groundstate="tennessine"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-groundstate="tennessine"><span class="bigfont1" aria-label="ground ">&nbsp;</span></li>
              <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
           </ul>
       </td>
@@ -1008,7 +1008,7 @@
              <li data-symbol="O g" aria-label="atomic symbol O g" class="bigfont2">O<span class="letter-tight">g</span></li>
              <li data-element="oganesson"><span class="bigfont1" aria-label="element">Oganesson</span></li>
              <li data-weight="(294)"><span class="bigfont1" aria-label="standard atomic weight (294)">(294)</span></li>
-             <li data-groundstate="oganesson"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-groundstate="oganesson"><span class="bigfont1" aria-label="ground ">&nbsp;</span></li>
              <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
           </ul>
       </td>
