--- a/index.html
+++ b/index.html
@@ -1270,7 +1270,7 @@
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
         Content: 27 January 2020<br />
-        WebAim: 2 December 2019 0<br />
+        WebAim: 27 January 2020 Needs Repair<br />
         NuHTML: 2 December 2019 multiple aria-label warnings (expected, in this case)<br />
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
         Note:aria-live role="region" added 3 Jan 2020 to display box for elements<br />
