--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
              <li data-symbol="A u" aria-label="atomic symbol A u" class="bigfont2">A<span class="letter-tight">u</span></li>
              <li data-element="gold"><span class="bigfont1" aria-label="element">Gold</span></li>
              <li data-weight="196.97"><span class="bigfont1" aria-label="standard atomic weight 196 . 9 7">196.97</span></li>
-             <li data-groundstate="gold"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 10 6s">[Xe]4f<sup>14</sup>5d<sup>10</sup>6s</li>
+             <li data-groundstate="gold"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 10 6s">[Xe]4f<sup>14</sup>5d<sup>10</sup>6s</span></li>
              <li data-ev="9.2256"><span class="bigfont1" aria-label="ionization energy 9 . 2 2 5 6">9.2256</span></li> 
           </ul>
       </td>
@@ -775,7 +775,7 @@
              <li data-symbol="H g" aria-label="atomic symbol H g" class="bigfont2">H<span class="letter-tight">g</span></li>
              <li data-element="mercury"><span class="bigfont1" aria-label="element">Mercury</span></li>
              <li data-weight="200.59"><span class="bigfont1" aria-label="standard atomic weight 200 . 5 9">200.59</span></li>
-             <li data-groundstate="mercury"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 10 6s 2">[Xe]4f<sup>14</sup>5d<sup>10</sup>6s<sup>2</sup></li>
+             <li data-groundstate="mercury"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 10 6s 2">[Xe]4f<sup>14</sup>5d<sup>10</sup>6s<sup>2</sup></span></li>
              <li data-ev="10.4375"><span class="bigfont1" aria-label="ionization energy 10 . 4 3 7 5">10.4375</span></li> 
           </ul>
       </td>
@@ -918,7 +918,7 @@
              <li data-symbol="M t" aria-label="atomic symbol M t" class="bigfont2">M<span class="letter-tight">t</span></li>
              <li data-element="meitnerium"><span class="bigfont1" aria-label="element">Meitnerium</span></li>
              <li data-weight="(278)"><span class="bigfont1" aria-label="standard atomic weight (278)">(278)</span></li>
-             <li data-groundstate="meitnerium"><span class="bigfont1" aria-label="ground ">&nbsp;</li>
+             <li data-groundstate="meitnerium"><span class="bigfont1" aria-label="ground ">&nbsp;</span></li>
              <li data-ev=""><span class="bigfont1" aria-label="ionization energy ">&nbsp;</span></li> 
           </ul>
       </td>
@@ -1023,7 +1023,7 @@
              <li data-symbol="L a" aria-label="atomic symbol L a" class="bigfont2">L<span class="letter-tight">a</span></li>
              <li data-element="lanthanum"><span class="bigfont1" aria-label="element">Lanthanum</span></li>
              <li data-weight="138.91"><span class="bigfont1" aria-label="standard atomic weight  138 . 9 1">138.91</span></li>
-             <li data-groundstate="lanthanum"><span class="bigfont1" aria-label="ground [Xe]5d 6s 2">[Xe]5d6s<sup>2</sup><span></li>
+             <li data-groundstate="lanthanum"><span class="bigfont1" aria-label="ground [Xe]5d 6s 2">[Xe]5d6s<sup>2</sup></span></li>
              <li data-ev="5.5769"><span class="bigfont1" aria-label="ionization energy 5 . 5 7 6 9">5.5769</span></li> 
           </ul>
       </td>
@@ -1033,7 +1033,7 @@
              <li data-symbol="C e" aria-label="atomic symbol C e" class="bigfont2">C<span class="letter-tight">e</span></li>
              <li data-element="cerium"><span class="bigfont1" aria-label="element">Cerium</span></li>
              <li data-weight="140.12"><span class="bigfont1" aria-label="standard atomic weight  140 . 1 2">140.12</span></li>
-             <li data-groundstate="cerium"><span class="bigfont1" aria-label="ground [Xe]4f 5d 6s 2">[Xe]4f5d6s<sup>2</sup><span></li>
+             <li data-groundstate="cerium"><span class="bigfont1" aria-label="ground [Xe]4f 5d 6s 2">[Xe]4f5d6s<sup>2</sup></span></li>
              <li data-ev="5.5386"><span class="bigfont1" aria-label="ionization energy 5 . 5 3 8 6">5.5386</span></li> 
           </ul>
       </td>
@@ -1043,7 +1043,7 @@
              <li data-symbol="P r" aria-label="atomic symbol P r" class="bigfont2">P<span class="letter-tight">r</span></li>
              <li data-element="praseodymium"><span class="bigfont1" aria-label="element">Praseodymium</span></li>
              <li data-weight="140.91"><span class="bigfont1" aria-label="standard atomic weight  140 . 9 1">140.91</span></li>
-             <li data-groundstate="praseodymium"><span class="bigfont1" aria-label="ground [Xe]4f 3 6s 2">[Xe]4f<sup>3</sup>6s<sup>2</sup><span></li>
+             <li data-groundstate="praseodymium"><span class="bigfont1" aria-label="ground [Xe]4f 3 6s 2">[Xe]4f<sup>3</sup>6s<sup>2</sup></span></li>
              <li data-ev="5.4702"><span class="bigfont1" aria-label="ionization energy 5 . 4 7 0 2">5.4702</span></li> 
           </ul>
       </td>
@@ -1053,7 +1053,7 @@
              <li data-symbol="N d" aria-label="atomic symbol N d" class="bigfont2">N<span class="letter-tight">d</span></li>
              <li data-element="neodymium"><span class="bigfont1" aria-label="element">Neodymium</span></li>
              <li data-weight="144.24"><span class="bigfont1" aria-label="standard atomic weight  144 . 2 4">144.24</span></li>
-             <li data-groundstate="neodymium"><span class="bigfont1" aria-label="ground [Xe]4f 4 6s 2">[Xe]4f <sup>4</sup> 6s <sup>2</sup> <span></li>
+             <li data-groundstate="neodymium"><span class="bigfont1" aria-label="ground [Xe]4f 4 6s 2">[Xe]4f <sup>4</sup> 6s <sup>2</sup></span></li>
              <li data-ev="5.5250"><span class="bigfont1" aria-label="ionization energy 5 . 5 2 5 0">5.5250</span></li> 
           </ul>
       </td>
@@ -1063,7 +1063,7 @@
              <li data-symbol="P m" aria-label="atomic symbol P m" class="bigfont2">P<span class="letter-tight">m</span></li>
              <li data-element="promethium"><span class="bigfont1" aria-label="element">Promethium</span></li>
              <li data-weight="(145)"><span class="bigfont1" aria-label="standard atomic weight  (145)">(145)</span></li>
-             <li data-groundstate="promethium"><span class="bigfont1" aria-label="ground [Xe]4f 5 6s 2">[Xe]4f <sup>5</sup> 6s <sup>2</sup> <span></li>
+             <li data-groundstate="promethium"><span class="bigfont1" aria-label="ground [Xe]4f 5 6s 2">[Xe]4f <sup>5</sup> 6s <sup>2</sup></span></li>
              <li data-ev="5.577"><span class="bigfont1" aria-label="ionization energy 5 . 5 7 7 0">5.577</span></li> 
           </ul>
       </td>
@@ -1073,7 +1073,7 @@
              <li data-symbol="S m" aria-label="atomic symbol S m" class="bigfont2">S<span class="letter-tight">m</span></li>
              <li data-element="samarium"><span class="bigfont1" aria-label="element">Samarium</span></li>
              <li data-weight="150.36"><span class="bigfont1" aria-label="standard atomic weight 150 . 3 6">150.36</span></li>
-             <li data-groundstate="samarium"><span class="bigfont1" aria-label="ground [Xe]4f 6 6s 2">[Xe]4f <sup>6</sup> 6s<sup>2</sup> <span></li>
+             <li data-groundstate="samarium"><span class="bigfont1" aria-label="ground [Xe]4f 6 6s 2">[Xe]4f <sup>6</sup> 6s<sup>2</sup></span></li>
              <li data-ev="5.6437"><span class="bigfont1" aria-label="ionization energy 5 . 6 4 3 7">5.6437</span></li> 
           </ul>
       </td>
@@ -1083,7 +1083,7 @@
              <li data-symbol="E u" aria-label="atomic symbol E u" class="bigfont2">E<span class="letter-tight">u</span></li>
              <li data-element="europium"><span class="bigfont1" aria-label="element">Europium</span></li>
              <li data-weight="151.96"><span class="bigfont1" aria-label="standard atomic weight 151 . 9 6">151.96</span></li>
-             <li data-groundstate="europium"><span class="bigfont1" aria-label="ground [Xe]4f 7 6s 2">[Xe]4f <sup>7</sup> 6s<sup>2</sup> <span></li>
+             <li data-groundstate="europium"><span class="bigfont1" aria-label="ground [Xe]4f 7 6s 2">[Xe]4f <sup>7</sup> 6s<sup>2</sup></span></li>
              <li data-ev="5.6704"><span class="bigfont1" aria-label="ionization energy 5 . 6 7 0 4">5.6704</span></li> 
           </ul>
       </td>
@@ -1093,7 +1093,7 @@
              <li data-symbol="G d" aria-label="atomic symbol G d" class="bigfont2">G<span class="letter-tight">d</span></li>
              <li data-element="gadolinium"><span class="bigfont1" aria-label="element">Gadolinium</span></li>
              <li data-weight="157.25"><span class="bigfont1" aria-label="standard atomic weight 157 . 2 5">157.25</span></li>
-             <li data-groundstate="gadolinium"><span class="bigfont1" aria-label="ground [Xe]4f 7 5d 6s 2">[Xe]4f<sup>7</sup>5d6s<sup>2</sup><span></li>
+             <li data-groundstate="gadolinium"><span class="bigfont1" aria-label="ground [Xe]4f 7 5d 6s 2">[Xe]4f<sup>7</sup>5d6s<sup>2</sup></span></li>
              <li data-ev="6.1498"><span class="bigfont1" aria-label="ionization energy 6 . 1 4 9 8">6.1498</span></li> 
           </ul>
       </td>
@@ -1103,7 +1103,7 @@
              <li data-symbol="T b" aria-label="atomic symbol T b" class="bigfont2">T<span class="letter-tight">b</span></li>
              <li data-element="terbium"><span class="bigfont1" aria-label="element">Terbium</span></li>
              <li data-weight="158.93"><span class="bigfont1" aria-label="standard atomic weight 158 . 9 3">158.93</span></li>
-             <li data-groundstate="terbium"><span class="bigfont1" aria-label="ground [Xe]4f 9 6s 2">[Xe]4f<sup>9</sup>6s<sup>2</sup><span></li>
+             <li data-groundstate="terbium"><span class="bigfont1" aria-label="ground [Xe]4f 9 6s 2">[Xe]4f<sup>9</sup>6s<sup>2</sup></span></li>
              <li data-ev="5.8638"><span class="bigfont1" aria-label="ionization energy 5 . 8 6 3 8">5.8638</span></li> 
           </ul>
       </td>
@@ -1113,7 +1113,7 @@
              <li data-symbol="D y" aria-label="atomic symbol D y" class="bigfont2">D<span class="letter-tight">y</span></li>
              <li data-element="dysprosium"><span class="bigfont1" aria-label="element">Dysprosium</span></li>
              <li data-weight="162.50"><span class="bigfont1" aria-label="standard atomic weight 162  .5 0">162.50</span></li>
-             <li data-groundstate="dysprosium"><span class="bigfont1" aria-label="ground [Xe]4f 10 6s 2">[Xe]4f<sup>10</sup>6s<sup>2</sup><span></li>
+             <li data-groundstate="dysprosium"><span class="bigfont1" aria-label="ground [Xe]4f 10 6s 2">[Xe]4f<sup>10</sup>6s<sup>2</sup></span></li>
              <li data-ev="5.9391"><span class="bigfont1" aria-label="ionization energy 5 . 9 3 9 1">5.9391</span></li> 
           </ul>
       </td>
@@ -1123,7 +1123,7 @@
              <li data-symbol="H o" aria-label="atomic symbol H o" class="bigfont2">H<span class="letter-tight">o</span></li>
              <li data-element="dysprosium"><span class="bigfont1" aria-label="element">Dysprosium</span></li>
              <li data-weight="164.93"><span class="bigfont1" aria-label="standard atomic weight 164 . 9 3">164.93</span></li>
-             <li data-groundstate="dysprosium"><span class="bigfont1" aria-label="ground [Xe]4f 11 6s 2">[Xe]4f<sup>11</sup>6s<sup>2</sup><span></li>
+             <li data-groundstate="dysprosium"><span class="bigfont1" aria-label="ground [Xe]4f 11 6s 2">[Xe]4f<sup>11</sup>6s<sup>2</sup></span></li>
              <li data-ev="6.0215"><span class="bigfont1" aria-label="ionization energy 6 . 0 2 1 5">6.0215</span></li> 
           </ul>
       </td>
@@ -1133,7 +1133,7 @@
              <li data-symbol="E r" aria-label="atomic symbol E r" class="bigfont2">E<span class="letter-tight">r</span></li>
              <li data-element="erbium"><span class="bigfont1" aria-label="element">Erbium</span></li>
              <li data-weight="167.26"><span class="bigfont1" aria-label="standard atomic weight 167 . 2 6">167.26</span></li>
-             <li data-groundstate="erbium"><span class="bigfont1" aria-label="ground [Xe]4f 12 6s 2">[Xe]4f<sup>12</sup>6s<sup>2</sup><span></li>
+             <li data-groundstate="erbium"><span class="bigfont1" aria-label="ground [Xe]4f 12 6s 2">[Xe]4f<sup>12</sup>6s<sup>2</sup></span></li>
              <li data-ev="6.1077"><span class="bigfont1" aria-label="ionization energy 6  . 1 0 7 7">6.1077</span></li> 
           </ul>
       </td>
@@ -1143,7 +1143,7 @@
              <li data-symbol="T m" aria-label="atomic symbol T m" class="bigfont2">T<span class="letter-tight">m</span></li>
              <li data-element="thulium"><span class="bigfont1" aria-label="element">Thulium</span></li>
              <li data-weight="168.93"><span class="bigfont1" aria-label="standard atomic weight 168 . 9 3">168.93</span></li>
-             <li data-groundstate="thulium"><span class="bigfont1" aria-label="ground [Xe]4f 13 6s 2">[Xe]4f<sup>13</sup>6s<sup>2</sup><span></li>
+             <li data-groundstate="thulium"><span class="bigfont1" aria-label="ground [Xe]4f 13 6s 2">[Xe]4f<sup>13</sup>6s<sup>2</sup></span></li>
              <li data-ev="6.1843"><span class="bigfont1" aria-label="ionization energy 6 . 1 8 4 3">6.1843</span></li> 
           </ul>
          </td>
@@ -1153,7 +1153,7 @@
              <li data-symbol="Y b" aria-label="atomic symbol Y b" class="bigfont2">Y<span class="letter-tight">b</span></li>
              <li data-element="ytterbium"><span class="bigfont1" aria-label="element">Ytterbium</span></li>
              <li data-weight="173.05"><span class="bigfont1" aria-label="standard atomic weight 173 . 0 5">173.05</span></li>
-             <li data-groundstate="ytterbium"><span class="bigfont1" aria-label="ground [Xe]4f 14 6s 2">[Xe]4f<sup>14</sup>6s<sup>2</sup><span></li>
+             <li data-groundstate="ytterbium"><span class="bigfont1" aria-label="ground [Xe]4f 14 6s 2">[Xe]4f<sup>14</sup>6s<sup>2</sup></span></li>
              <li data-ev="6.2542"><span class="bigfont1" aria-label="ionization energy 6 . 2 5 4 2">6.2542</span></li> 
           </ul>
       </td>         
@@ -1185,7 +1185,7 @@
              <li data-symbol="C m" aria-label="atomic symbol C m" class="bigfont2">C<span class="letter-tight">m</span></li>
              <li data-element="curium"><span class="bigfont1" aria-label="element">Curium</span></li>
              <li data-weight="247"><span class="bigfont1" aria-label="standard atomic weight ( 247 )">(247)</span></li>
-             <li data-groundstate="curium"><span class="bigfont1" aria-label="ground [Rn]5f 7 6d 7s2">[Rn]5f<sup>7</sup>6d7s<sup>2</sup><span></li>
+             <li data-groundstate="curium"><span class="bigfont1" aria-label="ground [Rn]5f 7 6d 7s2">[Rn]5f<sup>7</sup>6d7s<sup>2</sup></span></li>
              <li data-ev="5.9914"><span class="bigfont1" aria-label="ionization energy 5 . 9 9 1 4">5.9914</span></li> 
           </ul>
       </td>
@@ -1195,7 +1195,7 @@
              <li data-symbol="B k" aria-label="atomic symbol B k" class="bigfont2">B<span class="letter-tight">k</span></li>
              <li data-element="berkelium"><span class="bigfont1" aria-label="element">Berkelium</span></li>
              <li data-weight="247"><span class="bigfont1" aria-label="standard atomic weight ( 247 )">(247)</span></li>
-             <li data-groundstate="berkelium"><span class="bigfont1" aria-label="ground [Rn]5f 10 7s2">[Rn]5f<sup>10</sup>7s<sup>2</sup><span></li>
+             <li data-groundstate="berkelium"><span class="bigfont1" aria-label="ground [Rn]5f 10 7s2">[Rn]5f<sup>10</sup>7s<sup>2</sup></span></li>
              <li data-ev="6.1978"><span class="bigfont1" aria-label="ionization energy 6 . 1 9 7 8">6.1978</span></li> 
           </ul>
       </td>
@@ -1215,7 +1215,7 @@
              <li data-symbol="E s" aria-label="atomic symbol E s" class="bigfont2">E<span class="letter-tight">s</span></li>
              <li data-element="einsteinium"><span class="bigfont1" aria-label="element">Einsteinium</span></li>
              <li data-weight="252"><span class="bigfont1" aria-label="standard atomic weight ( 252 )">(252)</span></li>
-             <li data-groundstate="einsteinium"><span class="bigfont1" aria-label="ground [Rn]5f 11 7s2">[Rn]5f<sup>11</sup>7s<sup>2</sup><span></li>
+             <li data-groundstate="einsteinium"><span class="bigfont1" aria-label="ground [Rn]5f 11 7s2">[Rn]5f<sup>11</sup>7s<sup>2</sup></span></li>
              <li data-ev="6.3676"><span class="bigfont1" aria-label="ionization energy 6 . 3 6  7 6">6.3676</span></li> 
           </ul>
       </td>
@@ -1225,7 +1225,7 @@
              <li data-symbol="F m" aria-label="atomic symbol F m" class="bigfont2">F<span class="letter-tight">m</span></li>
              <li data-element="fermium"><span class="bigfont1" aria-label="element">Fermium</span></li>
              <li data-weight="257"><span class="bigfont1" aria-label="standard atomic weight ( 257 )">(257)</span></li>
-             <li data-groundstate="fermium"><span class="bigfont1" aria-label="ground [Rn]5f 12 7s2">[Rn]5f<sup>12</sup>7s<sup>2</sup><span></li>
+             <li data-groundstate="fermium"><span class="bigfont1" aria-label="ground [Rn]5f 12 7s2">[Rn]5f<sup>12</sup>7s<sup>2</sup></span></li>
              <li data-ev="6.50"><span class="bigfont1" aria-label="ionization energy 6 . 5 0">6.50</span></li> 
           </ul>
       </td>
@@ -1235,7 +1235,7 @@
              <li data-symbol="M d" aria-label="atomic symbol M d" class="bigfont2">M<span class="letter-tight">d</span></li>
              <li data-element="mendelevium"><span class="bigfont1" aria-label="element">Mendelevium</span></li>
              <li data-weight="258"><span class="bigfont1" aria-label="standard atomic weight ( 258 )">(258)</span></li>
-             <li data-groundstate="mendelevium"><span class="bigfont1" aria-label="ground [Rn]5f 13 7s2">[Rn]5f<sup>13</sup>7s<sup>2</sup><span></li>
+             <li data-groundstate="mendelevium"><span class="bigfont1" aria-label="ground [Rn]5f 13 7s2">[Rn]5f<sup>13</sup>7s<sup>2</sup></span></li>
              <li data-ev="6.58"><span class="bigfont1" aria-label="ionization energy 6 . 5 8">6.58</span></li> 
           </ul>
       </td>
@@ -1245,7 +1245,7 @@
              <li data-symbol="N o" aria-label="atomic symbol N o" class="bigfont2">N<span class="letter-tight">o</span></li>
              <li data-element="nobelium"><span class="bigfont1" aria-label="element">Nobelium</span></li>
              <li data-weight="259"><span class="bigfont1" aria-label="standard atomic weight ( 259 )">(259)</span></li>
-             <li data-groundstate="nobelium"><span class="bigfont1" aria-label="ground [Rn]5f14 7s2">[Rn]5f<sup>14</sup>7s<sup>2</sup><span></li>
+             <li data-groundstate="nobelium"><span class="bigfont1" aria-label="ground [Rn]5f14 7s2">[Rn]5f<sup>14</sup>7s<sup>2</sup></span></li>
              <li data-ev="6 . 6 6"><span class="bigfont1" aria-label="ionization energy 6 . 6 6">6.66</span></li> 
           </ul>
       </td>
@@ -1255,7 +1255,7 @@
              <li data-symbol="L r" aria-label="atomic symbol L r" class="bigfont2">L<span class="letter-tight">r</span></li>
              <li data-element="lawrencium"><span class="bigfont1" aria-label="element">lawrencium</span></li>
              <li data-weight="266"><span class="bigfont1" aria-label="standard atomic weight ( 266 )">(266)</span></li>
-             <li data-groundstate="lawrencium"><span class="bigfont1" aria-label="ground [Rn]5f14 7s2 7p">[Rn]5f<sup>14</sup>7s<sup>2</sup>7p<span></li>
+             <li data-groundstate="lawrencium"><span class="bigfont1" aria-label="ground [Rn]5f14 7s2 7p">[Rn]5f<sup>14</sup>7s<sup>2</sup>7p</span></li>
              <li data-ev="4.96"><span class="bigfont1" aria-label="ionization energy 4 . 9 6">4.96</span></li> 
           </ul>
       </td>
