--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
              <li data-symbol="P t" aria-label="atomic symbol P t" class="bigfont2">P<span class="letter-tight">t</span></li>
              <li data-element="platinum"><span class="bigfont1" aria-label="element">Platinum</span></li>
              <li data-weight="195.08"><span class="bigfont1" aria-label="standard atomic weight 195 . 0 8">195.08</span></li>
-             <li data-groundstate="platinum"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 9 6s">[Xe]4f<sup>14</sup>5d<sup>9</sup>6s</li>
+             <li data-groundstate="platinum"><span class="bigfont1" aria-label="ground [Xe]4f 14 5 d 9 6s">[Xe]4f<sup>14</sup>5d<sup>9</sup>6s</span></li>
              <li data-ev="8.9588"><span class="bigfont1" aria-label="ionization energy 8 . 9 5 8 8">8.9588</span></li> 
           </ul>
       </td>
