--- a/index.html
+++ b/index.html
@@ -1163,7 +1163,7 @@
              <li data-symbol="L u" aria-label="atomic symbol L u" class="bigfont2">L<span class="letter-tight">u</span></li>
              <li data-element="lutetium"><span class="bigfont1" aria-label="element">Lutetium</span></li>
              <li data-weight="174.97"><span class="bigfont1" aria-label="standard atomic weight 174 . 9 7">174.97</span></li>
-             <li data-groundstate="lutetium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5d 6s 2">[Xe]4f<sup>14</sup>5d6s<sup>2</sup><span></li>
+             <li data-groundstate="lutetium"><span class="bigfont1" aria-label="ground [Xe]4f 14 5d 6s 2">[Xe]4f<sup>14</sup>5d6s<sup>2</sup></span></li>
              <li data-ev="5.4259"><span class="bigfont1" aria-label="ionization energy 5 . 4 2 5 9">5.4259</span></li> 
           </ul>
       </td>
@@ -1205,7 +1205,7 @@
              <li data-symbol="C f" aria-label="atomic symbol C f" class="bigfont2">C<span class="letter-tight">f</span></li>
              <li data-element="californium"><span class="bigfont1" aria-label="element">Californium</span></li>
              <li data-weight="251"><span class="bigfont1" aria-label="standard atomic weight ( 251 )">(251)</span></li>
-             <li data-groundstate="californium"><span class="bigfont1" aria-label="ground [Rn]5f 10 7s2">[Rn]5f<sup>10</sup>7s<sup>2</sup><span></li>
+             <li data-groundstate="californium"><span class="bigfont1" aria-label="ground [Rn]5f 10 7s2">[Rn]5f<sup>10</sup>7s<sup>2</sup></span></li>
              <li data-ev="6.2817"><span class="bigfont1" aria-label="ionization energy 6 . 2 8 1 7">6.2817</span></li> 
           </ul>
       </td>
