--- a/index_kobackup1.html
+++ b/index_kobackup1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
    <!-- source for script https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Sections_and_Outlines_of_an_HTML5_document -->
    <!--[if lt IE 9]>
   <script>
