--- a/index.html
+++ b/index.html
@@ -1178,14 +1178,14 @@
       <td>Row 9, Cell 7</td>
       <td>Row 9, Cell 8</td>
       <td>Row 9, Cell 9</td>
-      <td id="curium" class="artificial" tabindex="0">
+      <td id="americium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="95"><span class="bigfont1" aria-label="atomic number 95">95</span></li>
-             <li data-symbol="C m" aria-label="atomic symbol C m" class="bigfont2">C<span class="letter-tight">m</span></li>
-             <li data-element="curium"><span class="bigfont1" aria-label="element">Curium</span></li>
-             <li data-weight="247"><span class="bigfont1" aria-label="standard atomic weight ( 247 )">(247)</span></li>
-             <li data-groundstate="curium"><span class="bigfont1" aria-label="ground [Rn]5f 7 6d 7s2">[Rn]5f<sup>7</sup>6d7s<sup>2</sup></span></li>
-             <li data-ev="5.9914"><span class="bigfont1" aria-label="ionization energy 5 . 9 9 1 4">5.9914</span></li> 
+             <li data-symbol="A m" aria-label="atomic symbol A m" class="bigfont2">A<span class="letter-tight">m</span></li>
+             <li data-element="americium"><span class="bigfont1" aria-label="element">Americium</span></li>
+             <li data-weight="243"><span class="bigfont1" aria-label="standard atomic weight ( 243 )">(243)</span></li>
+             <li data-groundstate="americium"><span class="bigfont1" aria-label="ground [Rn]5f 7 6d 7s2">[Rn]5f<sup>7</sup>6d7s<sup>2</sup></span></li>
+             <li data-ev="5.9738"><span class="bigfont1" aria-label="ionization energy 5 . 9 7 3 8">5.9738</span></li> 
           </ul>
       </td>
       <td id="curium" class="artificial" tabindex="0">
