--- a/index.html
+++ b/index.html
@@ -1184,7 +1184,7 @@
              <li data-symbol="A m" aria-label="atomic symbol A m" class="bigfont2">A<span class="letter-tight">m</span></li>
              <li data-element="americium"><span class="bigfont1" aria-label="element">Americium</span></li>
              <li data-weight="243"><span class="bigfont1" aria-label="standard atomic weight ( 243 )">(243)</span></li>
-             <li data-groundstate="americium"><span class="bigfont1" aria-label="ground [Rn]5f 7 6d 7s2">[Rn]5f<sup>7</sup>6d7s<sup>2</sup></span></li>
+             <li data-groundstate="americium"><span class="bigfont1" aria-label="ground [Rn]5f 7s2">[Rn]5f<sup>7</sup>7s<sup>2</sup></span></li>
              <li data-ev="5.9738"><span class="bigfont1" aria-label="ionization energy 5 . 9 7 3 8">5.9738</span></li> 
           </ul>
       </td>
@@ -1279,8 +1279,8 @@
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
         Content: 27 January 2020<br />
-        WebAim: 27 January 2020 Needs Repair<br />
-        NuHTML: 2 December 2019 multiple aria-label warnings (expected, in this case)<br />
+        WebAim: 27 January 2020 0<br />
+        NuHTML: 27 January 2020 multiple aria-label warnings (expected, in this case)<br />
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
         Note:aria-live role="region" added 3 Jan 2020 to display box for elements<br />
   </div>
