--- a/index.html
+++ b/index.html
@@ -1177,7 +1177,16 @@
       <td>Row 9, Cell 6</td>
       <td>Row 9, Cell 7</td>
       <td>Row 9, Cell 8</td>
-      <td>Row 9, Cell 9</td>
+      <td id="plutonium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="94"><span class="bigfont1" aria-label="atomic number 94">94</span></li>
+             <li data-symbol="P u" aria-label="atomic symbol P u" class="bigfont2">P<span class="letter-tight">u</span></li>
+             <li data-element="plutonium"><span class="bigfont1" aria-label="element">Plutonium</span></li>
+             <li data-weight="244"><span class="bigfont1" aria-label="standard atomic weight ( 244 )">(244)</span></li>
+             <li data-groundstate="plutonium"><span class="bigfont1" aria-label="ground [Rn]5f 8 s2">[Rn]5f<sup>8</sup>7s<sup>2</sup></span></li>
+             <li data-ev="6.0258"><span class="bigfont1" aria-label="ionization energy 6 . 0 2 5 8">6.0258</span></li> 
+          </ul>
+      </td>
       <td id="americium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="95"><span class="bigfont1" aria-label="atomic number 95">95</span></li>
