--- a/index_backup2.html
+++ b/index_backup2.html
@@ -1177,8 +1177,26 @@
       <td>Row 9, Cell 6</td>
       <td>Row 9, Cell 7</td>
       <td>Row 9, Cell 8</td>
-      <td>Row 9, Cell 9</td>
-      <td>Row 9, Cell 10</td>
+      <td id="plutonium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="94"><span class="bigfont1" aria-label="atomic number 94">94</span></li>
+             <li data-symbol="P u" aria-label="atomic symbol P u" class="bigfont2">P<span class="letter-tight">u</span></li>
+             <li data-element="plutonium"><span class="bigfont1" aria-label="element">Plutonium</span></li>
+             <li data-weight="244"><span class="bigfont1" aria-label="standard atomic weight ( 244 )">(244)</span></li>
+             <li data-groundstate="plutonium"><span class="bigfont1" aria-label="ground [Rn]5f 8 s2">[Rn]5f<sup>8</sup>7s<sup>2</sup></span></li>
+             <li data-ev="6.0258"><span class="bigfont1" aria-label="ionization energy 6 . 0 2 5 8">6.0258</span></li> 
+          </ul>
+      </td>
+      <td id="americium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="95"><span class="bigfont1" aria-label="atomic number 95">95</span></li>
+             <li data-symbol="A m" aria-label="atomic symbol A m" class="bigfont2">A<span class="letter-tight">m</span></li>
+             <li data-element="americium"><span class="bigfont1" aria-label="element">Americium</span></li>
+             <li data-weight="243"><span class="bigfont1" aria-label="standard atomic weight ( 243 )">(243)</span></li>
+             <li data-groundstate="americium"><span class="bigfont1" aria-label="ground [Rn]5f 7s2">[Rn]5f<sup>7</sup>7s<sup>2</sup></span></li>
+             <li data-ev="5.9738"><span class="bigfont1" aria-label="ionization energy 5 . 9 7 3 8">5.9738</span></li> 
+          </ul>
+      </td>
       <td id="curium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="96"><span class="bigfont1" aria-label="atomic number 96">96</span></li>
@@ -1258,7 +1276,7 @@
              <li data-groundstate="lawrencium"><span class="bigfont1" aria-label="ground [Rn]5f14 7s2 7p">[Rn]5f<sup>14</sup>7s<sup>2</sup>7p</span></li>
              <li data-ev="4.96"><span class="bigfont1" aria-label="ionization energy 4 . 9 6">4.96</span></li> 
           </ul>
-      </td>
+       </td>
      </tr>
 
   </tbody>
@@ -1270,8 +1288,8 @@
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
         Content: 27 January 2020<br />
-        WebAim: 27 January 2020 Needs Repair<br />
-        NuHTML: 2 December 2019 multiple aria-label warnings (expected, in this case)<br />
+        WebAim: 27 January 2020 0<br />
+        NuHTML: 27 January 2020 multiple aria-label warnings (expected, in this case)<br />
         Note:aria-label used to over-ride screen reader mispronunciations of atomic weights<br />
         Note:aria-live role="region" added 3 Jan 2020 to display box for elements<br />
   </div>
