--- a/index.html
+++ b/index.html
@@ -1176,7 +1176,16 @@
       <td>Row 9, Cell 5</td>
       <td>Row 9, Cell 6</td>
       <td>Row 9, Cell 7</td>
-      <td>Row 9, Cell 8</td>
+      <td id="neptunium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="93"><span class="bigfont1" aria-label="atomic number 93">93</span></li>
+             <li data-symbol="P u" aria-label="atomic symbol P u" class="bigfont2">P<span class="letter-tight">u</span></li>
+             <li data-element="neptunium"><span class="bigfont1" aria-label="element">Neptunium</span></li>
+             <li data-weight="237"><span class="bigfont1" aria-label="standard atomic weight ( 237 )">(237)</span></li>
+             <li data-groundstate="neptunium"><span class="bigfont1" aria-label="ground [Rn]5f 8 s2">[Rn]5f<sup>8</sup>7s<sup>2</sup></span></li>
+             <li data-ev="6.0258"><span class="bigfont1" aria-label="ionization energy 6 . 0 2 5 8">6.0258</span></li> 
+          </ul>
+      </td>
       <td id="plutonium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="94"><span class="bigfont1" aria-label="atomic number 94">94</span></li>
