--- a/index_backup1.html
+++ b/index_backup1.html
@@ -1176,8 +1176,26 @@
       <td>Row 9, Cell 5</td>
       <td>Row 9, Cell 6</td>
       <td>Row 9, Cell 7</td>
-      <td>Row 9, Cell 8</td>
-      <td>Row 9, Cell 9</td>
+      <td id="neptunium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="93"><span class="bigfont1" aria-label="atomic number 93">93</span></li>
+             <li data-symbol="N p" aria-label="atomic symbol N p" class="bigfont2">N<span class="letter-tight">p</span></li>
+             <li data-element="neptunium"><span class="bigfont1" aria-label="element">Neptunium</span></li>
+             <li data-weight="237"><span class="bigfont1" aria-label="standard atomic weight ( 237 )">(237)</span></li>
+             <li data-groundstate="neptunium"><span class="bigfont1" aria-label="ground [Rn]5f 4 6d 7s 2">[Rn]5f<sup>4</sup>6d7s<sup>2</sup></span></li>
+             <li data-ev="6 . 2 6 5 5"><span class="bigfont1" aria-label="ionization energy 6 . 2 6 5 5">6.2655</span></li> 
+          </ul>
+      </td>
+      <td id="plutonium" class="artificial" tabindex="0">
+            <ul>
+             <li data-atomicnumber="94"><span class="bigfont1" aria-label="atomic number 94">94</span></li>
+             <li data-symbol="P u" aria-label="atomic symbol P u" class="bigfont2">P<span class="letter-tight">u</span></li>
+             <li data-element="plutonium"><span class="bigfont1" aria-label="element">Plutonium</span></li>
+             <li data-weight="244"><span class="bigfont1" aria-label="standard atomic weight ( 244 )">(244)</span></li>
+             <li data-groundstate="plutonium"><span class="bigfont1" aria-label="ground [Rn]5f 6 s2">[Rn]5f<sup>6</sup>7s<sup>2</sup></span></li>
+             <li data-ev="6.0258"><span class="bigfont1" aria-label="ionization energy 6 . 0 2 5 8">6.0258</span></li> 
+          </ul>
+      </td>
       <td id="americium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="95"><span class="bigfont1" aria-label="atomic number 95">95</span></li>
@@ -1267,7 +1285,7 @@
              <li data-groundstate="lawrencium"><span class="bigfont1" aria-label="ground [Rn]5f14 7s2 7p">[Rn]5f<sup>14</sup>7s<sup>2</sup>7p</span></li>
              <li data-ev="4.96"><span class="bigfont1" aria-label="ionization energy 4 . 9 6">4.96</span></li> 
           </ul>
-      </td>
+       </td>
      </tr>
 
   </tbody>
