--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,16 @@
       <td>Row 9, Cell 4</td>
       <td>Row 9, Cell 5</td>
       <td>Row 9, Cell 6</td>
-      <td>Row 9, Cell 7</td>
+       <td id="uranium" class="solid" tabindex="0">
+            <ul>
+             <li data-atomicnumber="92"><span class="bigfont1" aria-label="atomic number 92">92</span></li>
+             <li data-symbol="U" aria-label="atomic symbol U" class="bigfont2">U<span class="letter-tight">&nbsp;</span></li>
+             <li data-element="uranium"><span class="bigfont1" aria-label="element">Uranium</span></li>
+             <li data-weight="237"><span class="bigfont1" aria-label="standard atomic weight ( 237 )">(237)</span></li>
+             <li data-groundstate="uranium"><span class="bigfont1" aria-label="ground [Rn]5f 4 6d 7s 2">[Rn]5f<sup>4</sup>6d7s<sup>2</sup></span></li>
+             <li data-ev="6 . 2 6 5 5"><span class="bigfont1" aria-label="ionization energy 6 . 2 6 5 5">6.2655</span></li> 
+          </ul>
+      </td>
       <td id="neptunium" class="artificial" tabindex="0">
             <ul>
              <li data-atomicnumber="93"><span class="bigfont1" aria-label="atomic number 93">93</span></li>
